--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,24 @@
-*{
+html{
     
     background-color:#f2f2f2;
-    font-family: PT Sans;
+    font-family:Sentinel SSm A,Sentinel SSm B,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
     color: #253b56;
-    line-height: 1.5;
+    font-size:1.2rem;
+    font-weight:400;
+    line-height:1.7;   
     text-align: center;
-    font-size: 18px;
-    box-sizing: inherit;
+    box-sizing: border-box;
+    
 }
+@media(max-width:1200px){
+    html{
+        font-size:1.1rem}
+    }
+    
+@media(max-width:800px){
+    html{
+        font-size:1rem}
+    }
 #Title{
     text-align: center;
 }
@@ -38,18 +49,21 @@
 }
 
 #p1{
-   
+
     font-weight: bold;
+}
+.main{
+    max-width: 680px;
+    margin: 0 auto;
 }
 #p2{
     margin: auto;
     word-wrap: break-word; 
-    width: 680px;  
+    display: inline-block;
     letter-spacing: -0.003em;
     font-weight: 400;
     text-align: justify;
     text-align-last: left;
-    
 }
 #tribute-info{
     text-align: center;
